compiler/testData/cli/jvm/optInEmptyMessage.out
compiler/testData/cli/jvm/optInEmptyMessage.kt:8:5: error: this declaration is experimental and its usage must be marked with '@EmptyMarker' or '@OptIn(EmptyMarker::class)'
    foo()
    ^
COMPILATION_ERROR
